<resources>
    <string name="app_name">Popcornatic</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top-Rated</string>
    <string name="original_title">Original Title</string>
    <string name="overview">Overview</string>
    <string name="origin_countries">Origin Countries</string>
    <string name="recommended">Recommended</string>
    <string name="crew">Crew</string>
    <string name="production">Production</string>
    <string name="movies">MOVIES</string>
    <string name="videos">VIDEOS</string>
    <string name="images">IMAGES</string>
    <string name="credits">CREDITS</string>
    <string name="trending">Trending</string>
    <string name="watch_now">Watch Now</string>
    <string name="on_air">On Air</string>
    <string name="tv_shows">TV SHOWS</string>
    <string name="aired">Aired</string>
    <string name="guest_stars">Guest Stars</string>
    <string name="search">Search</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="user">User</string>
    <string name="name">Name</string>
    <string name="moviesa">Movies</string>
    <string name="tv_showsa">Tv Shows</string>
</resources>