<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView

        android:id="@+id/nestedScrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bottom_nav_bar"
        app:layout_constraintTop_toTopOf="parent"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="2dp">

            <TextView
                android:id="@+id/trending_movie_label"
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/trending"

                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trending_movies_list"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_below="@id/trending_movie_label"
                android:layout_marginBottom="8dp"
                android:background="@drawable/outline_shape"
                android:padding="8dp" />

            <TextView
                android:id="@+id/popular_movies_label"
                style="@style/LabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/trending_movies_list"
                android:layout_marginStart="8dp"
                android:text="@string/popular" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popular_movies_list"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_below="@id/popular_movies_label"
                android:background="@android:color/transparent"
                android:paddingHorizontal="12dp" />

            <TextView
                android:id="@+id/upcoming_movie_label"
                style="@style/LabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/popular_movies_list"
                android:layout_marginStart="8dp"
                android:text="@string/upcoming" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upcoming_movies_list"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_below="@id/upcoming_movie_label"
                android:background="@android:color/transparent"
                android:paddingHorizontal="12dp" />

            <TextView
                android:id="@+id/toprated_label"
                style="@style/LabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/upcoming_movies_list"
                android:layout_marginStart="8dp"
                android:text="@string/top_rated" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/toprated_movie_list"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_below="@id/toprated_label"
                android:background="@android:color/transparent"
                android:paddingHorizontal="12dp" />


        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>



